--- a/module-3/sml-3-case-study-python.qmd
+++ b/module-3/sml-3-case-study-python.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Beyond Accuracy: How to Calculate Metrics"
-subtitle: "Case Study"
+subtitle: "Case Study Key"
 author: "LASER Institute"
 date: today 
 format:
@@ -15,6 +15,14 @@ editor: visual
 resource_files:
 - img/tidymodels.png
 ---
+
+```{r}
+#| include: false
+reticulate::py_install("pandas")
+reticulate::py_install("numpy")
+reticulate::py_install("statsmodels")
+reticulate::py_install("scikit-learn")
+```
 
 ## 1. PREPARE
 
@@ -46,151 +54,164 @@ You don't need to read the entire article yet, but please open this article, sca
 
 2.  YOUR RESPONSE HERE
 
-Like in the first learning module, we'll first load several packages -- {tidyverse}, {tidymodels}, and {janitor}. Make sure these are installed (via `install.packages()`). Note that if they're already installed, you don't need to install them again.
+Like in the first learning module, we'll first load several packages -- pandas and numpy. Note that if they're already installed, you don't need to install them again.
 
-```{r}
-library(tidyverse)
-library(tidymodels)
-library(janitor)
+```{python}
+import pandas as pd 
+import numpy as np 
+```
+
+We will also import a number of scikit-learn packages. Some are used in previous modules, but some we will introduce in this case study:
+
+```{python}
+from sklearn.model_selection import train_test_split
+from sklearn.pipeline import Pipeline
+from sklearn.impute import SimpleImputer
+from sklearn.linear_model import LogisticRegression
+from sklearn.metrics import accuracy_score, precision_score, confusion_matrix, cohen_kappa_score
+
+# These are new
+from sklearn.compose import ColumnTransformer
+from sklearn.preprocessing import OneHotEncoder
 ```
 
 ## 2. WRANGLE
 
-Like in the code-along for the overview presentation, let's take a look at the data and do some processing of it.
+Like in the code-along, let's take a look at the data and do some processing of it.
 
-#### [Your Turn]{style="color: green;"} ⤵
+#### **👉 Your Turn** **⤵**
 
 We'll load the students file together; you'll write code to read the assessments file, which is named "oulad-assessments.csv". Please assign the name `assessments` to the loaded assessments file.
 
-```{r}
+```{python}
 
 ```
 
 ## 3. EXPLORE
 
-#### [Your Turn]{style="color: green;"} ⤵
+#### **👉 Your Turn** **⤵**
 
-In the last module, we used the `count()` function. Let's practice that again, by counting the number of of assessments of different types. If you need, recall that the data dictionary is [here](https://analyse.kmi.open.ac.uk/open_dataset). Note what the different types of assessments mean.
+In the last learning module, we used the `value_counts()` function. Let's practice that again, by counting the number of of assessments of different types. If you need, recall that the data dictionary is [here](https://analyse.kmi.open.ac.uk/open_dataset). Note what the different types of assessments mean.
 
-```{r}
+```{python}
 
 ```
 
--   ADD YOUR RESPONSE HERE
+-   
 
-#### [Your Turn]{style="color: green;"} ⤵
+#### **👉 Your Turn** **⤵**
 
-We'll now use another function--like `count()`, from the {tidyverse}. Specifically, we'll use the `distinct()` function. This returns the unique (or distinct) values for a specified variable. Learn more about `distinct()` [here](https://dplyr.tidyverse.org/reference/distinct.html). Below, find the distinct assessment IDs.
+We'll now use another function--like `value_counts()`, from the pandas library. Specifically, we'll use the `nunique()` function. This returns the number of unique values for a specified variable. Learn more about `nunique` [here](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.nunique.html). Below, find the distinct assessment IDs.
 
-```{r}
+```{python}
 
 ```
 
 Let's explore the assessments data a bit.
 
-We might be interested in how many assessments there are per course. To calculate that, we need to `count()` several variables at once; when doing this, `count()` tabulates the number of unique combinations of the variables passed to it.
+We might be interested in how many assessments there are per course. We can use the pandas `groupby()` and `size()` to make a grouped pandas DataFrame:
 
-```{r}
-assessments %>% 
-    count(assessment_type, code_module, code_presentation)
+```{python}
+assessment_count_df = (
+    assessments_df
+        .groupby(['assessment_type', 'code_module', 'code_presentation'])
+        .size()
+        .reset_index(name='n')
+)
+
+assessment_count_df.head()
 ```
 
-Let's explore the dates assignments were submitted a bit -- using the `summarize()` function:
+Let's explore the dates assignments were submitted a bit -- using the `describe()` method:
 
-```{r}
-assessments %>% 
-    summarize(mean_date = mean(date, na.rm = TRUE), # find the mean date for assignments
-              median_date = median(date, na.rm = TRUE), # find the median
-              sd_date = sd(date, na.rm = TRUE), # find the sd
-              min_date = min(date, na.rm = TRUE), # find the min
-              max_date = max(date, na.rm = TRUE)) # find the mad
+```{python}
+assessments_df[['date']].describe()
 ```
 
 What can we take from this? It looks like, on average, the average (mean and median) date assignments were due was around 130 -- 130 days after the start of the course. The first assignment seems to have been due 12 days into the course, and the last 261 days after.
 
 Crucially, though, these dates vary by course. Thus, we need to first group the data by course. Let's use a different function this time -- `quantile()`, and calculate the first quantile value. Our reasoning is that we want to be able to act to support students, and if we wait until after the average assignment is due, then that might be too late. Whereas the first quantile comes approximately one-quarter through the semester --- with, therefore, more time to intervene.
 
-```{r}
-assessments %>% 
-    group_by(code_module, code_presentation) %>% # first, group by course (module: course; presentation: semester)
-    summarize(mean_date = mean(date, na.rm = TRUE),
-              median_date = median(date, na.rm = TRUE),
-              sd_date = sd(date, na.rm = TRUE),
-              min_date = min(date, na.rm = TRUE),
-              max_date = max(date, na.rm = TRUE),
-              first_quantile = quantile(date, probs = .25, na.rm = TRUE)) # find the first (25%) quantile
+Alright, this is a bit complicated, but we can actually work with this data. Let's use the `groupby` and `quantile` function on the `date` column, assigning it the name `code_module_dates`.
+
+```{python}
+code_module_dates_df = (
+    assessments_df
+    .groupby(['code_module', 'code_presentation'])['date']
+    .quantile(0.25)
+    .reset_index(name='quantile_cutoff_date')
+)
 ```
 
-Alright, this is a bit complicated, but we can actually work with this data. Let's use just a portion of the above code, assigning it the name `code_module_dates`.
-
-```{r}
-code_module_dates <- assessments %>% 
-    group_by(code_module, code_presentation) %>% 
-    summarize(quantile_cutoff_date = quantile(date, probs = .25, na.rm = TRUE))
-```
-
-#### [Your Turn]{style="color: green;"} ⤵
+#### **👉 Your Turn** **⤵**
 
 Let's take a look at what we just created; type `code_module_dates` below:
 
-```{r}
+```{python}
 
 ```
 
 What have we created? We found the date that is one-quarter of the way through the semester (in terms of the dates assignments are due).
 
-#### [Your Turn]{style="color: green;"} ⤵
+#### **👉 Your Turn** **⤵**
 
-We can thus use this to group and calculate students' performance on assignments through this point. To do this, we need to use a join function --- `left_join()`, in particular. Please use `left_join()` to join together `assessments` and `code_module_dates`, with `assessments` being the "left" data frame, and `code_module_dates` the right. Save the output of the join the name `assessments_joined`.
+We can thus use this to group and calculate students' performance on assignments through this point. To do this, we need to use a join function --- The pandas `merge()`, in particular (documentation [here](https://pandas.pydata.org/docs/reference/api/pandas.merge.html)).
 
-```{r}
+Please use the pandas merge function to join together `assessments_df` and `code_module_dates_df`, with `assessments_df` being the "left" data frame, and `code_module_dates_df` the "right". To specify the type of join, set the `how` parameter to 'left' and the `on` parameter to `['code_module', 'code_presentation']`.
+
+Save the output of the join the name `assessments_joined_df`.
+
+```{python}
 
 ```
 
-We're almost there! The next few lines filter the assessments data so it only includes assessments before our cutoff date.
+We're almost there! The next few line filters the assessments data so it only includes assessments before our cutoff date.
 
-```{r}
-assessments_filtered <- assessments_joined %>% 
-    filter(date < quantile_cutoff_date) # filter the data so only assignments before the cutoff date are included
+```{python}
+assessments_filtered_df = assessments_joined_df.query('date < quantile_cutoff_date') # filter the data so only assignments before the cutoff date are included
 ```
 
 Finally, we'll find the average score for each student.
 
-```{r}
-assessments_summarized <- assessments_filtered %>% 
-    mutate(weighted_score = score * weight) %>% # create a new variable that accounts for the "weight" (comparable to points) given each assignment
-    group_by(id_student) %>% 
-    summarize(mean_weighted_score = mean(weighted_score)) 
+```{python}
+assessments_filtered_df['weighted_score'] = assessments_filtered_df['score'] * assessments_filtered_df['weight']  # create a new variable that accounts for the "weight" (comparable to points) given each assignment
+
+assessments_summarized_df = (
+    assessments_filtered_df
+    .groupby('id_student')['weighted_score']
+    .mean()
+    .reset_index(name='mean_weighted_score')
+)
 ```
 
 As a point of reflection here, note how much work we've done before we've gotten to the machine learning steps. Though a challenge, this is typical for both machine learning and more traditional statistical models: a lot of the work is in the preparation and data wrangling stages.
 
 Let's copy the code below that we used to process the students data (when processing the `pass` and `imd_band` variables).
 
-```{r}
-students <- students %>% 
-    mutate(pass = ifelse(final_result == "Pass", 1, 0)) %>% # creates a dummy code
-    mutate(pass = as.factor(pass)) # makes the variable a factor, helping later steps
+```{python}
+students_df['pass'] = np.where(students_df['final_result'] == 'Pass', 1, 0)
 
-students <- students %>% 
-    mutate(imd_band = factor(imd_band, levels = c("0-10%",
-                                                  "10-20%",
-                                                  "20-30%",
-                                                  "30-40%",
-                                                  "40-50%",
-                                                  "50-60%",
-                                                  "60-70%",
-                                                  "70-80%",
-                                                  "80-90%",
-                                                  "90-100%"))) %>% # this creates a factor with ordered levels
-    mutate(imd_band = as.integer(imd_band)) # this changes the levels into integers based on the order of the factor levels
+imd_mapping = {  # maps from the text to a numerical, ordinal value (aka category 4 less than 5 and 5 represents values less than 6)
+    "0-10%": 1,
+    "10-20%": 2,
+    "20-30%": 3,
+    "30-40%": 4,
+    "40-50%": 5,
+    "50-60%": 6,
+    "60-70%": 7,
+    "70-80%": 8,
+    "80-90%": 9,
+    "90-100%": 10
+}
+
+students_df['imd_band'] = students_df['imd_band'].map(imd_mapping)
 ```
 
-#### [Your Turn]{style="color: green;"} ⤵
+#### **👉 Your Turn** **⤵**
 
-Finally, let's join together `students` and `assessments_summarized`, assigning the joined the name `students_and_assessments`.
+Finally, let's join together `students_df` and `assessments_summarized_df` on the id_student column, assigning the joined the name `students_and_assessments_df`.
 
-```{r}
+```{python}
 
 ```
 
@@ -202,7 +223,7 @@ The problem we will be working on - predicting students who pass, based on data 
 
 In [Baker et al. (2020)](https://www.tandfonline.com/doi/full/10.1080/10824669.2019.1670065), the authors create a precision-recall (also known as sensitivity) graph - one that demonstrates the trade-off between optimizing these two statistics. Review their paper - especially the results section - to see how they discuss these two statistics.
 
-> Baker, R. S., Berning, A. W., Gowda, S. M., Zhang, S., & Hawn, A. (2020). Predicting K-12 dropout. *Journal of Education for Students Placed at Risk, 25*(1), 28-54.
+> Baker, R. S., Berning, A. W., Gowda, S. M., Zhang, S., & Hawn, A. (2020). Predicting K-12 dropout. Journal of Education for Students Placed at Risk (JESPAR), 25(1), 28-54.
 
 Please review this paper before proceeding, focusing on how they describe
 
@@ -212,150 +233,191 @@ Please review this paper before proceeding, focusing on how they describe
 
 This is identical to what we did in the first learning module, using the `students_and_assessments` data. We'll also create a testing data set we'll use later.
 
-```{r}
-set.seed(20230712)
+```{python}
 
-students_and_assessments <- students_and_assessments %>% 
-    drop_na(mean_weighted_score)
+students_and_assessments_df = students_and_assessments_df.dropna(subset=['mean_weighted_score'])
 
-train_test_split <- initial_split(students_and_assessments, prop = .50, strata = "pass")
-data_train <- training(train_test_split)
-data_test <- testing(train_test_split)
+train_df, test_df = train_test_split(
+    students_and_assessments_df, 
+    test_size=0.5, 
+    stratify=students_and_assessments_df['pass'], 
+    random_state=20240712,
+)
 ```
 
-### Step 2: Engineer features and write down the recipe
+One we have a train and test dataset, we'll split apart the independent (`X`) from the dependent (`y`) variables.
 
-We'll also specify the recipe, adding our `mean_weighted_score` variable we calculated above as well as variables we used in LL1 (case study and badge). Note how we dummy code two variables using `step_dummy()` (described further in the first learning module).
+```{python}
+X_train = train_df.drop(columns=['pass'])  # Keeps all columns except our outcome column 'pass'
+y_train = train_df['pass']  # Isolates just the outcome column
 
-```{r}
-my_rec <- recipe(pass ~ disability +
-                     date_registration + 
-                     gender +
-                     code_module +
-                     mean_weighted_score, 
-                 data = data_train) %>% 
-    step_dummy(disability) %>% 
-    step_dummy(gender) %>%  
-    step_dummy(code_module)
-
+X_test = test_df.drop(columns=['pass'])
+y_test = test_df['pass']
 ```
 
-### Step 3: Specify the model and workflow
+### Step 2: Build the modeling Pipeline:
 
-These steps are also the same as in LL1.
+Real-world datasets often include a mix of categorical variables (such as a `gender` column with values like *Male*, *Female*, or *Non-binary*) and numerical variables (like average test scores; e.g., `mean_weighted_score`). These two types of data require different preprocessing steps before they can be used in a machine learning model. For instance, missing values in numerical features are often filled using the column’s median, while missing values in categorical features are typically replaced with the most frequent category.
 
-```{r}
-# specify model
-my_mod <-
-    logistic_reg() %>% 
-    set_engine("glm") %>% # generalized linear model
-    set_mode("classification") # since we are predicting a dichotomous outcome, specify classification; for a number, specify regression
+In this section, we introduce a new preprocessing technique using scikit-learn’s `OneHotEncoder`. This tool transforms a single categorical column into multiple binary columns, one for each unique category. This step ("one-hot encoding") is necessary because most machine learning models only accept numerical input. Some libraries, such as the *statsmodels* library we've used in earlier exercises, automatically handle categorical variables behind the scenes. However, with scikit-learn, we apply one-hot encoding manually, which gives us greater control over how the data is transformed and ensures consistency throughout the pipeline.
 
-# specify workflow
-my_wf <-
-    workflow() %>% # create a workflow
-    add_model(my_mod) %>% # add the model we wrote above
-    add_recipe(my_rec) # add our recipe we wrote above
-```
+```{python}
+categorical_transformer = Pipeline(steps=[
+    ("imputer", SimpleImputer(strategy="most_frequent")),
+    ("onehot", OneHotEncoder(drop="first", handle_unknown="ignore")),
+])
 
-### Step 4: Fit model
-
-Finally, we'll use the `last_fit` function, but we'll add something a little different - we'll add the metric set here. To the above, we'll add another common metric - Cohen's Kappa, which is similar to accuracy, but which accounts for chance agreement.
-
-To do so, we have to specify *which* metrics we want to use using the `metric_set()` function (see all of the available options [here](https://yardstick.tidymodels.org/articles/metric-types.html)). Please specify six metrics in the metric set -- accuracy, sensitivity, specificity, ppv (recall), npv, and kappa. Assign the name `class_metrics` to the output of your use of the `metric_set()` function.
-
-#### [Your Turn]{style="color: green;"} ⤵
-
-```{r}
+numerical_transformer = Pipeline(steps=[
+    ("imputer", SimpleImputer(strategy="mean")),
+])
 
 ```
 
-Then, please use `last_fit`, looking to how we did this in the last learning module for a guide on how to specify the argument nts. To the arguments, add `metrics = class_metrics`.
+Scikit-learn’s `ColumnTransformer` lets us apply different preprocessing steps to different columns in a single, organized pipeline. This is especially useful for datasets with both numerical and categorical features, allowing us to handle each type appropriately by referring to column names directly.
 
-```{r}
-final_fit <- last_fit(my_wf, train_test_split, metrics = class_metrics)
+We can then combine the `ColumnTransformer` with a model—such as `LogisticRegression`—using a `Pipeline`. This bundles preprocessing and modeling into one object, making it easy to train the model and make predictions on new data, while keeping the code clean and consistent.
+
+```{python}
+categorical_features = [
+    'disability',
+    'gender',
+    'code_module',
+]
+
+numerical_features = [
+    'date_registration',
+    'mean_weighted_score',
+]
+
+preprocessor = ColumnTransformer(transformers=[
+    ("cat", categorical_transformer, categorical_features),  
+    ("num", numerical_transformer, numerical_features)
+])
+
+# Full pipeline
+model_pipeline = Pipeline(steps=[
+    ("preprocessor", preprocessor),
+    ("classifier", LogisticRegression())
+])
+```
+
+In this example, we refer to columns by name. However, when applying transformations to all columns of a certain type, a common approach is to use pandas' `select_dtypes()` method to automatically detect and group them by data type.
+
+```{python}
+# This is example code:
+numerical_features = X_train.select_dtypes(include=['int64', 'float64']).columns.tolist()
+categorical_features = X_train.select_dtypes(include=['object', 'category']).columns.tolist()
+```
+
+### Step 3: Fit model and calculate metrics
+
+Finally, we'll use the `fit` function on the `model_pipeline` object to train the model with the training dataset, and the `predict` method to make new predictions on the test dataset.
+
+#### **👉 Your Turn** **⤵**
+
+```{python}
+
+```
+
+Once you’ve generated predictions on the test dataset, follow the same pattern we used in the earlier code-along to calculate the full set of evaluation metrics. These include: accuracy, sensitivity (recall), specificity, precision, negative predictive value, and Cohen’s kappa.
+
+```{python}
+
 ```
 
 We're now ready to move on to interpreting the accuracy of our model.
 
-### Step 5: Interpret accuracy
+### Step 4: Interpret accuracy
 
-### A confusion matrix and true and false positives and negatives
+So, what's the accuracy? Add that below as a percentage.
 
-Let's start with a simple confusion matrix. The confusion matrix is a 2 x 2 table with values (cells in the table) representing one of four conditions, elaborated below. You'll fill in the last two columns in a few moments.
-
-|      Statistic      |       How to Find       |                                          Interpretation                                          | Value | \%  |
-|:--------:|:--------:|:---------------------------------:|:--------:|:--------:|
-| True positive (TP)  | Truth: 1, Prediction: 1 |    Proportion of the population that is affected by a condition and correctly tested positive    |       |     |
-| True negative (TN)  | Truth: 0, Prediction: 0 |  Proportion of the population that is not affected by a condition and correctly tested negative  |       |     |
-| False positive (FP) | Truth: 0, Prediction: 1 | Proportion of the population that is not affected by a condition and incorrectly tested positive |       |     |
-| False negative (FN) | Truth: 1, Prediction: 0 |  Proportion of the population that is affected by a condition and incorrectly tested positive.   |       |     |
-
-To create a confusion matrix, run `collect_predictions()`, which does what it suggests - it gathers together the model's test set predictions. Pass the `last_fit` object to this function below.
-
-#### [Your Turn]{style="color: green;"} ⤵
-
-```{r}
-
-```
-
-Take a look at the columns. You'll need to provide the predictions (created with `collect_predictions()`) and then pipe that to `conf_mat()`, to which you provide the names of a) the predictions and b) the known values for the test set. Some code to get you started is below.
-
-```{r}
-collect_predictions(final_fit) %>% 
-    conf_mat(.pred_class, pass)
-```
-
-You should see a confusion matrix output. If so, nice work! Please fill in the **Value** and **Percentage** columns in the table above (with TP, TN, FP, and FN), entering the appropriate values and then converting those into a percentage based on the total number of data points in the test data set. The accuracy can be interpreted as the sum of the true positive and true negative percentages. So, what's the accuracy? Add that below as a percentage.
-
--   **Accuracy:**
+-   **Accuracy:** 56.6%
 
 ### Other measures of predictive accuracy
 
 Here's where things get interesting: There are other statistics that have different denominators. Recall from the overview presentation that we can slice and dice the confusion matrix to calculate statistics that give us insights into the predictive utility of the model. Based on the above **Values** for TP, TN, FP, and FN you interpreted a few moments ago, add the **Statistic Values** for sensitivity, specificity, precision, and negative predictive value below to three decimal points.
 
-#### [Your Turn]{style="color: green;"} ⤵
+#### **👉 Your Turn** **⤵**
 
-|                                               |                |                                                                                                                                |                                                                                    |                      |
-|:----------:|:----------:|:----------------------:|:------------:|:----------:|
-|                 **Statistic**                 |  **Equation**  |                                                       **Interpretation**                                                       |                               **Question Answered**                                | **Statistic Values** |
-|         **Sensitivity** (AKA recall)          | TP / (TP + FN) |                       Proportion of those who are affected by a condition and correctly tested positive                        |        Out of all the actual positives, how many did we correctly predict?         |                      |
-|                **Specificity**                | TN / (FP + TN) |                     Proportion of those who are not affected by a condition and correctly tested negative;                     |        Out of all the actual negatives, how many did we correctly predict?         |                      |
-| **Precision** (AKA Positive Predictive Value) | TP / (TP + FP) |                            Proportion of those who tested positive who are affected by a condition                             | Out of all the instances we predicted as positive, how many are actually positive? |                      |
-|         **Negative Predictive Value**         | TN / (TN + FN) | Proportion of those who tested positive who are not affected by a condition; *the probability that a negative test is correct* | Out of all the instances we predicted as negative, how many are actually negative? |                      |
+|  |  |  |  |  |
+|:-------------:|:-------------:|:-------------:|:-------------:|:-------------:|
+| **Statistic** | **Equation** | **Interpretation** | **Question Answered** | **Statistic Values** |
+| **Sensitivity** (AKA recall) | TP / (TP + FN) | Proportion of those who are affected by a condition and correctly tested positive |  |  |
+| **Specificity** | TN / (FP + TN) | Proportion of those who are not affected by a condition and correctly tested negative; |  |  |
+| **Precision** (AKA Positive Predictive Value) | TP / (TP + FP) | Proportion of those who tested positive who are affected by a condition |  |  |
+| **Negative Predictive Value** | TN / (TN + FN) | Proportion of those who tested positive who are not affected by a condition; *the probability that a negative test is correct* |  |  |
 
 So, what does this hard-won by output tell us? Let's interpret each statistic carefully in the table below. Please add the value and provide a *substantive interpretation*. One is provided to get you started.
 
-#### [Your Turn]{style="color: green;"} ⤵
+#### **👉 Your Turn** **⤵**
 
-|                                           |                                                                                                                                             |
-|------------------|------------------------------------------------------|
-| **Statistic**                             | **Substantive Interpretation**                                                                                                              |
-| Accuracy                                  |                                                                                                                                             |
-| Sensitivity (AKA recall)                  | The model correctly predicts about 2/3 of students who do not pass correctly (as not passing). This is pretty good, but it could be better. |
-| Specificity                               |                                                                                                                                             |
-| Precision (AKA Positive Predictive Value) |                                                                                                                                             |
-| Negative Predictive Value                 |                                                                                                                                             |
+|  |  |
+|------------------------------------|------------------------------------|
+| **Statistic** | **Substantive Interpretation** |
+| Accuracy |  |
+| Sensitivity (AKA recall) | The model correctly predicts about 2/3 of students who do not pass correctly (as not passing). This is pretty good, but it could be better. |
+| Specificity |  |
+| Precision (AKA Positive Predictive Value) |  |
+| Negative Predictive Value |  |
 
 This process might suggest to you how a "good" model isn't necessarily one that is the most accurate, but instead is one that has good values for statistics that matter given our particular question and context.
 
 Recall that Baker and colleagues sought to balance between precision and recall (specificity). Please briefly discuss how well our model does this; is it better suited to correctly identifying "positive" pass cases (sensitivity) or "negatively" identifying students who do not pass (specificity)?
 
--   YOUR RESPONSE HERE
+-   
 
 ## 5. COMMUNICATE
 
 ### Quickly calculating metrics
 
-After all of this work, we *can* calculate the above much more easily given how we setup our metrics (using `metric_set()` earlier, such as when we want to efficiently communicate the results of our analysis to our audience? Below, use `collect_metrics()` with the `final_fit` object, noting that in addition to the four metrics we calculated manually just a few moments ago, we are also provided with the accuracy and Cohen's Kappa values.
+That was quite a bit of work to calculate those metrics manually. If evaluating models in this way is something we plan to do frequently, it makes sense to encapsulate the logic in a reusable function. This not only saves time and reduces repetitive code, but also helps ensure **consistency** across experiments and makes our analysis easier to maintain and debug as our projects grow.
 
-#### [Your Turn]{style="color: green;"} ⤵
+```{python}
+def calculate_model_performance_metrics(y_actual, y_preds) -> dict: 
+    """
+    Calculates a suite of classification performance metrics.
 
-```{r}
+    This function computes common evaluation metrics for binary classification,
+    including accuracy, sensitivity (recall), specificity, precision,
+    negative predictive value, and Cohen’s kappa. It assumes the positive class is labeled as 1.
+
+    Args:
+        y_actual (list or array): Ground truth (true) binary labels.
+        y_preds (list or array): Predicted binary labels.
+
+    Returns:
+        dict: A dictionary containing all metrics:
+    """
+    accuracy = accuracy_score(y_actual, y_preds)
+    precision = precision_score(y_actual, y_preds, pos_label=1)
+    kappa = cohen_kappa_score(y_actual, y_preds)
+    
+    true_negative, false_positive, false_negative, true_positive = confusion_matrix(y_actual, y_preds).ravel()
+    
+    sensitivity = true_positive / (true_positive + false_negative)  # or the sklearn.metrics recall_score function
+    specificity = true_negative / (true_negative + false_positive)
+    
+    negative_predictive_value = true_negative / (true_negative + false_negative)
+
+    return {
+        "accuracy": accuracy,
+        "sensitivity": sensitivity,
+        "specificity": specificity,
+        "precision": precision,
+        "negative_predictive_value": negative_predictive_value,
+        "cohen_kappa": kappa
+    }
+```
+
+#### **👉 Your Turn** **⤵**
+
+Use the `calculate_model_performance_metrics` function defined above to calculate the suite of metrics.
+
+```{python}
 
 ```
 
-Having invested in understanding the terminology of machine learning metrics, we'll use this "shortcut" (using `collect_metrics()` going forward.
+Having invested in understanding the terminology of machine learning metrics, we'll use this "shortcut" going forward.
 
 ### 🧶 Knit & Check ✅
 
